# marbles

./: .gitignore  ASSET_PROMPTS.md  CLAUDE.md  GAME.md  README.md  render.yaml
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: ActivityFeed.tsx  BattleOverlay.tsx  DiceOverlay.tsx  DiceRoller.tsx  ErrorToast.test.tsx  ErrorToast.tsx  Fireworks.tsx  GameBoard.tsx  GameOverScreen.tsx  GameScreen.test.tsx  GameScreen.tsx  HomeScreen.tsx  HowToPlayDialog.tsx  LobbyScreen.tsx  MinigameResultsOverlay.tsx  MinigameScreen.tsx  PlayerHUD.tsx  Scoreboard.tsx  SpectatorView.tsx  TileEffectOverlay.tsx  TurnBanner.tsx
client/src/components/minigames/: BallTracker.tsx  CanvasFill.tsx  (+18 more)
client/src/hooks/: useSocket.ts
client/src/types/: game.ts
client/src/utils/: haptics.test.ts  haptics.ts  sound.test.ts  sound.ts
server/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
server/app/: config.py  database.py  main.py  socketio_handlers.py
server/app/board/: generator.py  pathfinding.py  tokens.py
server/app/game/: battle.py  cpu.py  effects.py  passphrase.py  persistence.py  state.py
server/app/game/minigames/: base.py
server/app/models/: __init__.py  base.py  game_event.py  player.py  session.py  tile.py
server/tests/: conftest.py  test_battle.py  test_board.py  test_effects.py  test_minigames.py  test_passphrase.py  test_reachable.py  test_session_expiry_handlers.py  test_session_lifecycle.py  test_state.py  test_tokens.py  test_turn_complete.py
